ft. part1 chapter3 (java learning)